# ufw

./: .gitignore  AGENTS.md  ChangeLog  ChangeLog.pre-0.25  Makefile  README.design  README.md  README.translations  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  setup_historic.py  snapcraft.yaml
.github/workflows/: coverage.yml  lint.yml  semantic.yml  test.yml
debian/: changelog  config  control  ufw.lintian-overrides  ufw.postinst  ufw.postrm  ufw.preinst  ufw.prerm  watch
debian/patches/: 0001-optimize-boot.patch  0002-fix-tests-with-python312.patch  0003-fix-syntax-warnings-with-python312.patch  0004-fix-manpage-font.patch  0005-add-lxd-to-manpage.patch  0006-update-ufw-framework.patch  0007-clarify-enable-force.patch  series
debian/po/: ca.po  zh_CN.po  zh_TW.po
debian/source/: lintian-overrides
debian/tests/: unittest
debian/upstream/: signing-key.asc
doc/: skel-ui.example  ufw-framework.8  ufw-on-snappy.8  ufw.8
shell-completion/: bash
snap-files/: ufw.completer.bash
src/: __init__.py  after.init  applications.py  backend.py  backend_iptables.py  before.init  common.py  frontend.py  main.py  parser.py  ufw  ufw-init  ufw-init-functions  util.py
tests/: check-locales  check-requirements  run-black  run-py-helper  testlib.sh
tests.old/: run_tests.sh  runtest_ex.sh  testlib.sh
tests/debug/: test_boot.sh  wrap_command.sh
tests/e2e/: runner.py  test_breadth.py  test_chains.py  test_concurrency.py  test_good.py  test_idempotency.py  test_lifecycle.py  test_smoke.py
tests/functional/: __init__.py  commands.py  runner.py  (+12 more)
(+84 files in other folders)
